mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: databases
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: databases
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: databases
        tier: mysql
    spec:
      containers:
        - image: tobi312/rpi-mariadb:10.6-debian
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: config-volume
              mountPath: /etc/mysql/mariadb.conf.d
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: hlasta-pi-143
      volumes:
        - name: config-volume
          configMap:
            name: mysql-replica-config
            defaultMode: 420
            optional: true
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-2-pvc
