mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  serviceName: "mysql-service"
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mariadb
          ports:
            - containerPort: 3306
              name: mysql-port
          volumeMounts:
            - name:  mysql-persistent-storage
              mountPath: /var/lib/mysql/
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/role: worker
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
