phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: databases
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: ebspace/armhf-phpmyadmin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 250M
            limits:
              cpu: 500m
              memory: 250M
