mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: databases
  labels:
    app: mysql
spec:
  selector:
    app: mysql
    tier: mysql
  ports:
    - port: 3306
      name: mysql-port
  clusterIP: None
