phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
  namespace: databases
spec:
  ingressClassName: nginx
  rules:
    - host: phpmyadmin.hlasta.home
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
